# DR-youtube-transcriber

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  EXAMPLE_LOGS.md  FINAL_REPORT.md  INDEX.md  QUICK_SUMMARY.md  README.md  SETUP_GUIDE.md  SUMMARY.md  TESTING_GUIDE.md  UI_GUIDE.md  YOUTUBE_AUDIO_FIX.md  pyproject.toml  render.yaml
samples/: README.md
src/transcribe_cli/: __init__.py  app.py  cli.py  config.py
src/transcribe_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/transcribe_cli/adapters/: openai_client.py
src/transcribe_cli/core/: ai_features.py  chunking.py  pipeline.py  postprocess.py
src/transcribe_cli/utils/: exporters.py  ffmpeg.py  fs.py  logging.py  youtube.py
src/transcribe_cli/writers/: __init__.py  json_writer.py  srt_writer.py  text_writer.py  vtt_writer.py
tests/: test_chunking_stitch.py  test_cli_args.py  test_diarize_fallback.py  test_upload_pipeline.py  test_writers.py  test_youtube.py  test_youtube_audio.py
